fix: select placeholder jumping with label above

--- a/packages/components/src/styles/internal/_select-components.scss
+++ b/packages/components/src/styles/internal/_select-components.scss
@@ -21,8 +21,17 @@ $select-icon-padding: calc(
 
 %select-absolute-placeholder {
 	position: absolute;
-	inset-block-start: 0;
+	inset-block-end: 0;
 	inset-inline-start: 0;
+	opacity: 0;
+
+	@media screen and (prefers-reduced-motion: no-preference) {
+		transition:
+			opacity #{variables.$db-transition-straight-emotional},
+			outline #{variables.$db-transition-duration-extra-fast},
+			border-color #{variables.$db-transition-straight-emotional},
+			background-color #{variables.$db-transition-straight-emotional};
+	}
 }
 
 %select-placeholder {
